começando a trabalhar na funcionalidade de busca em profundidade